# VKInternship

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  features.py  pyproject.toml  solution.py  submission.csv  train.py
