[tool.poetry]
name = "vkinternship"
version = "0.1.0"
description = ""
authors = ["Fedorov Vlad <fedorovvladislav481@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
kneed = "^0.8.5"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
tqdm = "^4.66.2"
catboost = "^1.2.3"
optuna = "^3.6.0"
optuna-integration = "^3.6.0"

[tool.black]
line-length = 90

[tool.isort]
line_length = 90
force_grid_wrap = 2
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
